--- a/src/main/webapp/order.html
+++ b/src/main/webapp/order.html
@@ -136,7 +136,7 @@
                 <div class="layui-input-inline">
                     <input type="text" name="roomNum" placeholder="请输入房号" autocomplete="off" class="layui-input">
                 </div>
-                <label class="layui-form-label">渠道</label>
+                <label class="layui-form-label">机构</label>
                 <div class="layui-input-inline">
                     <select id="channel" name="channel" lay-search>
                         <option value=""></option>
