--- a/src/main/webapp/income.html
+++ b/src/main/webapp/income.html
@@ -32,15 +32,15 @@
 <div style="height: 70px;"></div>
 <form class="layui-form" style="padding-top: 10px">
     <div class="layui-form-item">
-        <label class="layui-form-label">起止时间</label>
-        <div class="layui-input-inline" style="width: 165px;">
-            <input type="text" name="startTime" lay-verify="required" id="startTime" autocomplete="off"
-                   class="layui-input inline-input"
-                   placeholder="时间">
-        </div>
-        <div class="layui-input-inline">
-            <button class="layui-btn" lay-submit="" lay-filter="formData">查询</button>
-        </div>
+        <!--<label class="layui-form-label">起止时间</label>-->
+        <!--<div class="layui-input-inline" style="width: 165px;">-->
+            <!--<input type="text" name="startTime" lay-verify="required" id="startTime" autocomplete="off"-->
+                   <!--class="layui-input inline-input"-->
+                   <!--placeholder="时间">-->
+        <!--</div>-->
+        <!--<div class="layui-input-inline">-->
+            <!--<button class="layui-btn" lay-submit="" lay-filter="formData">查询</button>-->
+        <!--</div>-->
     </div>
 </form>
 <div class="tab-box">
@@ -63,15 +63,103 @@
         //获取
         function resultInfo() {
             var obj = {
-                date:$("#startTime").val().replace(/-/g, "/")+" 04:00:00"
+                // date:$("#startTime").val().replace(/-/g, "/")+" 04:00:00"
             };
             $.ajax({
-                url: '/income/getIncome',
+                url: '/income/getIncome ',
                 type: 'POST',
-                data: obj,
+                // data: obj,
                 dataType: 'json',
                 success: function (data) {
-                    formatData(data.data)
+                    var rs = data.data;
+                    var newRs = [{
+                        project: "房费"
+                    },{
+                        project: "超时费"
+                    },{
+                        project: "房费调整"
+                    },{
+                        project: "其他费用"
+                    },{
+                        project: "商品"
+                    },{
+                        project: "赔偿"
+                    },{
+                        project: "会员卡收入"
+                    },{
+                        project: "借方总计"
+                    },{
+                        project: "现金"
+                    },{
+                        project: "银行卡"
+                    },{
+                        project: "微信"
+                    },{
+                        project: "支付宝"
+                    },{
+                        project: "储值支付"
+                    },{
+                        project: "贷方总计"
+                    }]
+                    for(var i=0;i<newRs.length;i++){
+                        var v = 'roomRate'
+                        switch(i) {
+                            case 1:
+                                v =  'timeoutRoomRate'
+                                break;
+                            case 2:
+                                v =  'roomRateAdjustment'
+                                break;
+                            case 3:
+                                v =  'otherRate'
+                                break;
+                            case 4:
+                                v =  'commodity'
+                                break;
+                            case 5:
+                                v =  'compensation'
+                                break;
+                            case 6:
+                                v =  'memberCardRate'
+                                break;
+                            case 7:
+                                v =  'debtSum'
+                                break;
+                            case 8:
+                                v =  'cash'
+                                break;
+                            case 9:
+                                v =  'bankCard'
+                                break;
+                            case 10:
+                                v =  'wechat'
+                                break;
+                            case 11:
+                                v =  'alipay'
+                                break;
+                            case 12:
+                                v =  'storedPay'
+                                break;
+                            case 13:
+                                v =  'creditSum'
+                                break;
+                        }
+
+                        newRs[i]['a'] = rs[0][v];
+                        newRs[i]['b'] = rs[1][v];
+                        newRs[i]['c'] = rs[2][v];
+                        newRs[i]['d'] = rs[3][v];
+                        newRs[i]['e'] = rs[4][v];
+                        newRs[i]['f'] = rs[5][v];
+                        newRs[i]['g'] = rs[6][v];
+                        newRs[i]['h'] = rs[7][v];
+
+                        // for(var j=0;j<rs.length;j++){
+
+                        // }
+                    }
+                    // debugger;
+                    formatData(newRs)
                 }
             })
         }
@@ -112,14 +200,14 @@
                 , {align: 'center', title: '去年同期', colspan: 4}
 
             ], [
-                {field: 'thisYearThisPrice', align: 'center', title: '当日'}
-                , {field: 'thisYearThisMonth', align: 'center', title: '月累计'}
-                , {field: 'thisYearThisLastMonth', align: 'center', title: '上月累计'}
-                , {field: 'thisYearThisYear', align: 'center', title: '年累计'}
-                ,{field: 'lastYearThisMonth', align: 'center', title: '月累计'}
-                , {field: 'lastYearMonthDifferences', align: 'center', title: '月差异'}
-                , {field: 'lastYearThisYear', align: 'center', title: '年累计'}
-                , {field: 'lastYearDifferencesIn', align: 'center', title: '年差异'}
+                {field: 'a', align: 'center', title: '当日'}
+                , {field: 'b', align: 'center', title: '月累计'}
+                , {field: 'c', align: 'center', title: '上月累计'}
+                , {field: 'd', align: 'center', title: '年累计'}
+                ,{field: 'e', align: 'center', title: '月累计'}
+                , {field: 'f', align: 'center', title: '月差异'}
+                , {field: 'g', align: 'center', title: '年累计'}
+                , {field: 'h', align: 'center', title: '年差异'}
             ]]
         });
 
